# mkdocs-quiz

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
example/: README.md  mkdocs.yml  requirements.txt  setup.sh
example/docs/: advanced.md  getting-started.md  index.md  troubleshooting.md
example/docs/examples/: mixed-exercise.md  multiple-choice.md  self-assessment.md  text-input.md
src/: extension.py  plugin.py
src/static/: quiz.css  quiz.js
